workloads/frigate-genai/ollama-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate-genai-ollama
  labels: {app: frigate-genai-ollama}
spec:
  selector: {matchLabels: {app: frigate-genai-ollama}}
  template:
    metadata: {labels: {app: frigate-genai-ollama}}
    spec:
      terminationGracePeriodSeconds: 180
      containers:
      - name: worker
        startupProbe:
          exec:
            command: ["python", "-c", "from temporalio.client import Client; import asyncio, os; asyncio.run(Client.connect(os.environ.get('TEMPORAL_ADDRESS','temporal-frontend.default.svc.cluster.local:7233')))"]
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 6
        image: ghcr.io/john2143/frigate-genai-genai:upscale-tool
        imagePullPolicy: Always
        args: ["--mode=genai-ollama"]
        resources:
          requests: {cpu: "250m", memory: "512Mi"}
          limits: {cpu: "1000m", memory: "2Gi"}
